<resources>
    <string name="app_name">UniTasker</string>
    <string name="availability">Availability</string>
    <string name="monday">Monday</string>
    <string name="thursday">Thursday</string>
    <string name="sunday">Sunday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="save_schedule">Save Schedule</string>
    <string name="tasks">Tasks</string>
    <string name="subjects">Subjects</string>
    <string name="management">Management</string>
    <string name="new_task">New Task</string>
    <string name="calendar">Calendar</string>
    <string name="new_subject">New Subject</string>
    <string name="subject_name">Subject Name</string>
    <string name="subject_color">Subject Color</string>
    <string name="save">Save</string>
    <string name="machine_learning_methods_research">Machine learning methods research</string>
    <string name="machine_learning">Machine learning</string>
    <string name="task_name">Task Name</string>
    <string name="subject">Subject</string>
    <string name="web_development">Web Development</string>
    <string name="project_management">Project Management</string>
    <string name="date">Date</string>
    <string name="hour">Hour</string>
    <string name="assign_automatically">Assign automatically</string>
    <string name="duration_hours">Duration (Hours)</string>
    <string name="deadline">DeadLine</string>
    <string name="allow_notifications">Allow notifications</string>
    <string name="current_subjects">Current Subjects</string>
    <string name="subject_created">Subject created</string>
    <string name="please_type_a_name">Please type a name</string>
    <string name="delete_subject">Delete subject</string>
    <string name="are_you_sure_you_wanna_delete_this_subject_all_tasks_assigned_to_this_subject_will_be_removed_too">Are you sure you wanna delete this subject? All tasks assigned to this subject will be removed too</string>
    <string name="delete_task">Delete task</string>
    <string name="are_you_sure_of_delete_this_task">Are you sure of delete this task?</string>
    <string name="please_select_a_subject">Please select a subject</string>
    <string name="please_type_task_name">Please type task name</string>
    <string name="the_task_duration_is_invalid">The task duration is invalid</string>
    <string name="task_created">Task created</string>
    <string name="hours">Hours</string>
    <string name="a_task_with_the_typed_name_already_exits">A task with the typed name already exits</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="start_time_must_be_before_end_time">Start time must be before end time</string>
    <string name="schedule_deleted">Schedule deleted</string>
    <string name="no_schedules_available">No schedules available</string>
    <string name="you_don_t_have_any_available_schedule_for_the_selected_assignment_date_do_you_want_to_create_the_task_anyway">You don\'t have any available schedule for the selected assignment date, do you want to create the task anyway?</string>
    <string name="assignment_date_should_be_before_the_deadline">Assignment date should be before the deadline</string>
    <string name="final_day">FINAL DAY</string>
    <string name="do_at">Do at</string>
</resources>
