<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/availability" />


        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            app:flexWrap="wrap"
            app:justifyContent="space_evenly">

            <Button
                style="@style/Theme.UniTasker.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/monday"
                android:textColor="@color/primary" />

            <Button
                style="@style/Theme.UniTasker.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/thursday" />

            <Button
                style="@style/Theme.UniTasker.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/sunday" />

            <Button
                style="@style/Theme.UniTasker.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/tuesday" />

            <Button
                style="@style/Theme.UniTasker.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/wednesday" />

            <Button
                style="@style/Theme.UniTasker.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/friday" />
        </com.google.android.flexbox.FlexboxLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextTextPersonName7"
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_edittext_background"
                    android:backgroundTint="@color/primary"
                    android:backgroundTintMode="add"
                    android:ems="10"
                    android:inputType="time"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="08:00 AM - 10:00 AM"
                    android:textSize="12sp"
                    app:drawableEndCompat="@drawable/ic_time" />

                <ImageButton
                    android:layout_width="16dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_trash" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_edittext_background"
                    android:backgroundTint="@color/primary"
                    android:backgroundTintMode="add"
                    android:ems="10"
                    android:inputType="time"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="06:00 PM - 09:00 PM"
                    android:textSize="12sp"
                    app:drawableEndCompat="@drawable/ic_time" />

                <ImageButton
                    android:layout_width="16dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_trash" />
            </LinearLayout>
        </LinearLayout>


        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="+"
            android:textAllCaps="false"
            android:textColor="@color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save_schedule"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>